Scrollbar bakground color changed to a higher value. Added conditional in function to avoid running script when scroll limits are hit.

--- a/css/master.css
+++ b/css/master.css
@@ -141,7 +141,7 @@
     height: 45em;
     padding-bottom: 1%;
     /* scroll-behavior: smooth; */
-    scrollbar-color: var(--basel) var(--based);
+    scrollbar-color: var(--basel) var(--ext);
   }
 
   .primarynav ul.menu {
